[package]
name = "challenge3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
longan-nano =  {version = "0.3.0", features = ["lcd"]}
embedded-hal = "0.2.6"
gd32vf103xx-hal = "0.5.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
heapless = "0.7.7"



